--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	fastled/FastLED@^3.9.3
 	4-20ma/ModbusMaster@^2.0.1
+	; arduino-libraries/NTPClient@^3.2.1
