--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+board_flash_size = 16MB
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
@@ -18,4 +19,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	fastled/FastLED@^3.9.3
 	4-20ma/ModbusMaster@^2.0.1
-	; arduino-libraries/NTPClient@^3.2.1
+	arduino-libraries/NTPClient@^3.2.1
