--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	fastled/FastLED@^3.9.3
 	4-20ma/ModbusMaster@^2.0.1
 	arduino-libraries/NTPClient@^3.2.1
+	ldab/esp32_ftpclient@^0.1.4
